--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ python-multipart==0.0.12
 numpy==2.1.1
 # webrtcvad==2.0.10  # Opcional - requer Microsoft Visual C++ Build Tools no Windows
 aiohttp==3.11.3
+httpx==0.27.2
 python-dotenv==1.0.1
 structlog==24.4.0
 
